--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myFirstApp",
+  "name": "passwordgenerator",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,10 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/material-bottom-tabs": "^6.2.19",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.3",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.73.0",
     "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-paper": "^4.12.6",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3",
     "yup": "^1.3.3"
   },
   "devDependencies": {
